# dns

./: Cargo.toml  README.md
config/: config.json
src/: main.rs
src/cache/: mod.rs
src/config/: mod.rs
src/filter/: mod.rs
src/middleware/: logging.rs  metrics.rs  mod.rs  rate_limit.rs
src/resolver/: mod.rs
src/server/: mod.rs
src/service/: cache.rs
src/utils/: mod.rs
