[package]
edition = "2024"
name = "dns"
version = "0.1.0"

[dependencies]
async-trait = "0.1.89"
hickory-dns = "0.25.2"
hickory-proto = "0.25.2"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
