[package]
edition = "2024"
name = "dns"
version = "0.1.0"

[dependencies]
async-trait = "0.1.89"
domain = "0.11.0"
moka = {version = "0.12.10", features = ["future"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
